# hmpps-sre-python-lib

./: .ruff.toml  CHANGELOG.md  README.md  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/actions/run-pytest/: action.yml
.github/workflows/: backup_repository.yml  check_tag_availability_on_push.yml  push_libs.yml  security_codeql_python_scan.yml  security_snyk_scan.yml  security_trivy.yml  tag_on_merged.yml  test_python.yml  test_python_lint.yml
.husky/: pre-commit
docs/clients/: CircleCI.md  GithubSession.md  ServiceCatalogue.md  ServiceCatalogueTests.md
docs/services/: health.md
docs/utils/: UTILS.md
src/hmpps/: __init__.py
src/hmpps/clients/: circleci.py  github.py  service_catalogue.py  sharepoint.py  slack.py
src/hmpps/models/: alertmanager.py  repository_info.py
src/hmpps/services/: health_server.py  job_log_handling.py
src/hmpps/utils/: utilities.py
tests/: TESTS.md  conftest.py  decorator_demo.py  test_service_catalogue.py
tests/clients/: __init__.py  test_service_catalogue.py  test_sharepoint.py
